--- a/main.html
+++ b/main.html
@@ -7,6 +7,52 @@
 </head>
 
 <body>
+	<form method="POST">
+        <div>
+            <label for="name">Name*</label>
+            <input type="text" id="name" required placeholder="Name">
+        </div>
+        
+        <div>
+            <label for="emai;">Email*</label>
+            <input type="text" id="email" required placeholder="Email">
+        </div>
+
+        <div>
+            <label for="gender">Gender*</label>
+            <label for="gender_m">Male</label>
+            <input type="radio" name="" id="gender_m" required>
+            <label for="gender_f">Female</label>
+            <input type="radio" name="" id="gender_f" required>
+        </div>
+
+        <div>
+            <label for="cars">Car Brands </label>
+            <select name="" id="cars" required>
+                <!-- <option value="" disabled selected>--Please choose an option--</option> -->
+                <option value="">BMW</option>
+                <option value="">Audi</option>
+                <option value="">Mercedez</option>
+            </select>
+        </div>
+
+        <label for="carage">Car Age*</label>
+        <input type="number" name="" id="carage" required placeholder="Age">
+
+        <label for="dop">Date of Purchase(dop)*</label>
+        <input type="date" name="" id="dop" required>
+
+        <label for="password">Password*</label>
+        <input type="password" name="" id="password" required placeholder="Password">
+
+        <!-- <label for="tos"> I agree to the TOS</label>
+        <input type="checkbox" name="" id="tos" required> -->
+
+        <!-- <label for="portfolio">Portfolio URL</label>
+        <input type="url" id="portfolio" name="portfolio"> -->
+
+
+        <button type="submit">submit</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
